# tseapy

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  TROUBLESHOOTING.md  VERSIONING.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PROPOSED_TASKS.md
static/css/: styles.css
templates/: algo.html  index.html  upload.html  wizard_steps.html
templates/layouts/: layout.html  layout_without_sidebar.html  sidebar.html
templates/parameters/: list_parameter.html
tests/: test_analysis_backends.py  test_app_routes.py  test_forecasting_expansion.py  test_packaging.py  test_parameters.py  test_tasks.py  test_upload.py  test_upload_parser.py
tseapy/: cli.py
tseapy-venv/: pyvenv.cfg
tseapy-venv/Scripts/: activate  activate.bat  numba  pycc
tseapy/core/: __init__.py  analysis_backends.py  parameters.py  tasks.py  validation.py
tseapy/data/: examples.py  upload.py
tseapy/static/: .gitignore
tseapy/tasks/change_in_mean/: __init__.py  pelt_l2.py  sliding_window_l2.py
tseapy/tasks/decomposition/: __init__.py  classical.py  stl.py
tseapy/tasks/forecasting/: __init__.py  auto_arima.py  auto_ets.py  auto_theta.py  common.py  comparison.py  historic_average.py  lightgbm_mlforecast.py  naive.py  seasonal_naive.py  xgboost_mlforecast.py
tseapy/tasks/frequency_analysis/: __init__.py  lomb_scargle.py  (+2 more)
tseapy/templates/: algo.html  task.html  upload.html  upload_preview.html
tseapy/view/: visualizer.py
(+15 files in other folders)
