[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tseapy"
dynamic = ["version"]
description = "Interactive time series analysis in the browser with Flask and Plotly."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "tseapy contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "Flask==3.0.3",
    "Flask-Caching==2.3.0",
    "pandas==2.2.3",
    "numpy==2.2.6",
    "plotly==5.24.1",
    "ruptures==1.1.9",
    "scikit-learn==1.7.1",
    "stumpy==1.13.0",
    "statsforecast==2.0.3",
    "charset-normalizer==3.4.1",
    "statsmodels==0.14.4",
    "scipy==1.14.1",
    "mlforecast==0.13.4",
    "lightgbm==4.5.0",
    "xgboost==2.1.3",
]

[project.urls]
Homepage = "https://github.com/mrkshdt/tseapy"
Repository = "https://github.com/mrkshdt/tseapy"

[project.scripts]
tseapy = "tseapy.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["app", "wsgi"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tseapy*"]

[tool.setuptools.dynamic]
version = { attr = "tseapy.__version__" }

[tool.setuptools.package-data]
tseapy = [
    "templates/*.html",
    "templates/*/*.html",
    "templates/*/*/*.html",
    "static/*",
    "static/*/*",
    "static/*/*/*",
]
